--- a/.env
+++ b/.env
@@ -36,6 +36,6 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-###> symfony/mailer ###
-# MAILER_DSN=null://null
-###< symfony/mailer ###
+##> symfony/mailer ###
+MAILER_DSN=null://null
+##< symfony/mailer ###
